# spark-udf-benchmark

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: report.md
results/: 100k.json  100m.json  10m.json  1m.json  50m.json
src/spark_udf_benchmark/: __init__.py  __main__.py  benchmark.py  result.py
tests/: conftest.py  test_benchmark.py
